Added library from Gist

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,2 @@
-/* You can add global styles to this file, and also import other style files */
+// Import ngx-emoji-mart styles for the picker in the demo app:
+@import '~@ctrl/ngx-emoji-mart/picker';
