Added option to pass a custom replace function

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,25 @@
-<h1>ng-utf8-emojis-to-images demo</h1>
 
+<h1>ng-utf8-emojis-to-images demo</h1>
 <h3>Input</h3>
 <p>Enter HTML containing unicode emojis here:</p>
 <input type="text" size="90" [(ngModel)]="htmlString" />
 <p>Add from <code>@ctrl/ngx-emoji-mart</code> (to the front of the above input):</p>
-<emoji-mart (emojiClick)="addEmoji($event)" [set]="sheet === '' ? null : sheet" [isNative]="sheet === ''"></emoji-mart>
+<emoji-mart (emojiClick)="addEmoji($event)" [set]="sheet === '' || sheet === 'font' ? null : sheet" [isNative]="sheet === ''"></emoji-mart>
 <hr>
 
 <h3>Output</h3>
 <p>Rendered HTML containing emojis as image elements:</p>
-<p [innerHTML]= "sheet !== '' ? (htmlString | utf8EmojisToImages:sheet:size:sheetSize:backgroundImageFn:sheetRows:sheetColumns) : htmlString">
+<div [ngStyle]="{fontSize: size + 'px'}">
+  <p
+      *ngIf="sheet !== 'font'; else customReplaceSample"
+      [innerHTML]= "sheet !== '' ? (htmlString | utf8EmojisToImages:sheet:size:sheetSize:backgroundImageFn:sheetRows:sheetColumns) : htmlString">
+    Start editing to see some magic happen :)
+  </p>
 
-  Start editing to see some magic happen :)
-</p>
+  <ng-template #customReplaceSample>
+    <p [innerHTML]="htmlString | utf8EmojisToImages:elementFn"></p>
+  </ng-template>
+</div>
 
 <hr>
 <h3>Configuration</h3>
@@ -35,6 +42,11 @@
 <div>
   <input type="radio" value="facebook" id="facebook" name="sheet" [(ngModel)]="sheet" >
   <label for="facebook">Facebook</label>
+</div>
+
+<div>
+  <input type="radio" value="font" id="font" name="sheet" [(ngModel)]="sheet" >
+  <label for="font">Emojione font (using custom element creation callback)</label>
 </div>
 
 <div>
